# kubegen

./: Cargo.toml
src/: envfile.rs  main.rs  manifests.rs
