[package]
name = "kubegen"
version = "0.1.0"
authors = ["whn <me@whn.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snailquote = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { git = "https://github.com/clap-rs/clap/" }
